# systemVI

./: .gitignore  GitGradle.md  README.md  README.md.old  build.gradle  gradle.properties  gradlew  local.properties  push.bat  settings.gradle  settings.gradle.kts
.bloop/: break-out.json  cats.json  character-movement-homework.json  collections.json  compute-gradient.json  compute-graph.json  diffusion.json  engine.json  examples.json  fabrik.json  firmata.json  flappybird.json  fluid.json  fractals.json  game-of-life.json  generative-shaders.json  instancing.json  java-and-scala.json  jni-lib.json  ktor-server.json  lanterna-powerline.json  maze.json  model-viewer.json  multi-window.json  new-shape-renderer.json  noise.json  normal-mapping.json  paint.json  parallel.json  particle-system-homework.json  particle-system.json  phong.json  physics2d.json  sdf.json  shadertoy.json  snake.json  test.json  test3dmodels.json  tetris.json  text-platformer.json  (+4 more)
.gitea/workflows/: deploy-dev.yaml  deploy-production.yaml  deploy-test.yaml
arduino/: .gitignore
arduino/ble_split/left/main/: CMakeLists.txt  main.c  main.cpp
arduino/ble_split/left/main/lib/: launcher.cpp
arduino/ble_split/left/main/lib/systemvi/: Arduino.cpp  Bluetooth.cpp  Bluetooth.hpp  Keyboard.cpp  Keyboard.hpp
arduino/systemvi_keyboard_library/: CMakeLists.txt
arduino/systemvi_keyboard_library/examples/test_keyboard/: sketch.yaml  test_keyboard.ino
arduino/systemvi_keyboard_library/src/: Key.h  Key.hpp  Keycap.cpp  Keycap.h  LayerKeyPosition.h  MacroKey.cpp  MacroKey.h  NormalKey.cpp  NormalKey.h  SnapTapKey.h  SnapTapPair.h  SplitPeripheral.h  SystemVIKeyboard.cpp  SystemVIKeyboard.h  SystemVIKeyboard.hpp
compose-app/: gradle.properties  settings.gradle.kts
demo-examples/: build.gradle
docs/: Lanterna.md  breakout.md
engine/: build.gradle.kts
examples/: build.gradle  build.gradle.kts
jni-lib/: .gitignore  build.gradle
ktor-server/: build.gradle.kts
ktor-website/: .gitignore  settings.gradle.kts
public/: index.html
scala-playground/: .gitignore  inputs.txt  main.scala  output.txt
voxel-world/: build.gradle  build.gradle.kts
website/: .gitignore  build.gradle.kts  build.sbt  dist.sh  google-client-secret.json.example  jwt-auth.json  main.js  package-lock.json  package.json  style.css  vite.config.js  website-dev.sh
(+1253 files in other folders)
